build: swap ktlint for diktat